styles.css
/* font-family: 'Open Sans', sans-serif;
font-family: 'Roboto', sans-serif; */

:root {
  /* colors */
  --clr-primary-bgcolor: #f3f5f7;
  --clr-primary-font-color: #461268;
  --clr-primary-accent-bgcolor: #1b7e32; /* green */
  --clr-primary-accent-font: #ffffff; /* white */

  --clr-secondary-bgcolor: #f3f6e1;
  --clr-secondary-font-color: #2f3137;

  --clr-light-bgcolor: #fff; /* White */
  --clr-decorative: #dce651;

  /* font-families */
  --ff-sans-serif: "Montserrat", sans-serif;

  /* font sizes */
  --fs-button: 0.875rem;
  --fs-caption: 0.75rem;
  --fs-body: 1rem;
  --fs-subheading: 1.5rem;
  --fs-h6: 1.25rem;
  --fs-h5: 1.5rem;
  --fs-h4: 2.125rem;
  --fs-h3: 3rem;
  --fs-h2: 3.5rem;
  --fs-h1: 4rem;

  /* font-weights */
  --fw-300-light: 300;
  --fw-400-reg: 400;
  --fw-500-med: 500;
  --fw-600-semibold: 600;
  --fw-700-bold: 700;
  --fw-800-exrabold: 800;
  --fw-900-black: 900;
  --header-height: 60px;
}

* {
  box-sizing: border-box; /* Include padding and border in the element's total width and height */
  margin: 0;
  padding: 0;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
figure,
picture {
  margin: 0; /* Reset margin to 0 */
}

ul,
ol {
  padding: 0; /* Reset padding to 0 */
}

/* Colors utility classes*/
.u-primary-bgcolor {
  background-color: var(--clr-primary-bgcolor);
}

.u-primary-font-color {
  color: var(--clr-primary-font-color);
}

.u-primary-font-color-bg {
  background-color: var(--clr-primary-font-color);
}

.u-primary-cta-bgcolor {
  background-color: var(--clr-primary-accent-bgcolor);
}

.u-primary-cta-font-color {
  color: var(--clr-primary-accent-font);
}

.u-primary-cta-font-color-bg {
  background-color: var(--clr-primary-accent-font);
}

.u-secondary-font-color {
  color: var(--clr-secondary-font-color);
}
.u-secondary-font-color-bg {
  background-color: var(--clr-secondary-font-color);
}

.u-secondary-bgcolor {
  background-color: var(--clr-secondary-bgcolor);
}

.u-colors-decorative {
  background-color: var(--clr-decorative);
}

/* typography */
.u-ff-sans-serif {
  font-family: var(--ff-sans-serif);
}

/* Utility classes */
.u-fs-body {
  font-size: var(--fs-body);
}
.u-fs-subheading {
  font-size: var(--fs-subheading);
}
.u-fs-h6 {
  font-size: var(--fs-h6);
}
.u-fs-h5 {
  font-size: var(--fs-h5);
}
.u-fs-h4 {
  font-size: var(--fs-h4);
}
.u-fs-h3 {
  font-size: var(--fs-h3);
}
.u-fs-h2 {
  font-size: var(--fs-h2);
}
.u-fs-h1 {
  font-size: var(--fs-h1);
}

/* font weight utility classes */
.u-fw-light {
  font-weight: var(--fw-300-light);
}
.u-fw-reg {
  font-weight: var(--fw-400-reg);
}
.u-fw-med {
  font-weight: var(--fw-500-med);
}
.u-fw-semibold {
  font-weight: var(--fw-600-semibold);
}
.u-fw-bold {
  font-weight: var(--fw-700-bold);
}
.u-fw-extrabold {
  font-weight: var(--fw-800-exrabold);
}
.u-fw-black {
  font-weight: var(--fw-900-black);
}

/* font letter spacing utility classes */
.u-letter-spacing-heading {
  letter-spacing: 0.8px;
}
.u-letter-spacing-subheading {
  letter-spacing: 0.64px;
}
.u-letter-spacing-body {
  letter-spacing: 0.5px;
}
.u-letter-spacing-caption {
  letter-spacing: 0.35px;
}
.u-letter-spacing-typeface {
  letter-spacing: 2.5px;
}

/* font line height utility classes */
.u-line-height-body {
  line-height: 2rem;
}

/* headers utility classes */
.u-h1 {
  font-size: var(--fs-h1);
  font-weight: var(--fw-800-exrabold);
  letter-spacing: 0.8px;
}

.u-h2 {
  font-size: var(--fs-h2);
  font-weight: var(--fw-600-semibold);
  letter-spacing: 0.64px;
}

.u-h3 {
  font-size: var(--fs-h3);
  font-weight: var(--fw-500-med);
  letter-spacing: 0.64px;
}

.u-h4 {
  font-size: var(--fs-h4);
  font-weight: var(--fw-500-med);
  letter-spacing: 0.64px;
}

.u-h5 {
  font-size: var(--fs-h5);
  font-weight: var(--fw-500-med);
  letter-spacing: 0.64px;
}

.u-h6 {
  font-size: var(--fs-h6);
  font-weight: var(--fw-500-med);
  letter-spacing: 0.64px;
}

.u-subheading {
  font-size: var(--fs-subheading);
  font-weight: var(--fw-500-med);
  letter-spacing: 0.64px;
}

.u-body {
  font-size: var(--fs-body);
  font-weight: var(--fw-400-reg);
  letter-spacing: 0.48px;
  color: var(--clr-primary-font-color);
}

.u-header {
  font-size: var(--fs-h6);
  font-weight: var(--fw-500-med);
  letter-spacing: 0;
  color: var(--clr-primary-font-color);
}

/* Uppercase utility class */
.u-uppercase {
  text-transform: uppercase;
}

.u-list-style {
  list-style: none;
}

/* Base spacing classes */

/* Margins */
.l-m {
  margin: 1rem;
}
.l-m-1-25 {
  margin: 1.25rem;
} /* 1.25rem = 20px */
.l-m-1-5 {
  margin: 1.5rem;
} /* 1.5rem = 24px */
.l-m-1-75 {
  margin: 1.75rem;
} /* 1.75rem = 28px */
.l-m-2 {
  margin: 2rem;
} /* 2rem = 32px */
.l-m-2-25 {
  margin: 2.25rem;
} /* 2.25rem = 36px */
/* Margin Top */
.l-mt-1 {
  margin-top: 1rem;
}
.l-mt-1-25 {
  margin-top: 1.25rem;
}
.l-mt-1-5 {
  margin-top: 1.5rem;
}
.l-mt-1-75 {
  margin-top: 1.75rem;
}
.l-mt-2 {
  margin-top: 2rem;
}
.l-mt-2-5 {
  margin-top: 2.5rem;
}
.l-mt-3 {
  margin-top: 3rem;
}
/* Margin Bottom */
.l-mb-0-5 {
  margin-bottom: 0.5rem;
}
.l-mb-1 {
  margin-bottom: 1rem;
}
.l-mb-1-25 {
  margin-bottom: 1.25rem;
}
.l-mb-1-5 {
  margin-bottom: 1.5rem;
}
.l-mb-1-75 {
  margin-bottom: 1.75rem;
}
.l-mb-2 {
  margin-bottom: 2rem;
}
/* Margin Left */
.l-ml-1 {
  margin-left: 1rem;
}
.l-ml-1-25 {
  margin-left: 1.25rem;
}
.l-ml-1-5 {
  margin-left: 1.5rem;
}
.l-ml-1-75 {
  margin-left: 1.75rem;
}
.l-ml-2 {
  margin-left: 2rem;
}
/* Margin Right */
.l-mr-1 {
  margin-right: 1rem;
}
.l-mr-1-25 {
  margin-right: 1.25rem;
}
.l-mr-1-5 {
  margin-right: 1.5rem;
}
.l-mr-1-75 {
  margin-right: 1.75rem;
}
.l-mr-2 {
  margin-right: 2rem;
}
/* Margin X (Horizontal Margin) */
.l-mx-1 {
  margin-left: 1rem;
  margin-right: 1rem;
}
.l-mx-1-25 {
  margin-left: 1.25rem;
  margin-right: 1.25rem;
}
.l-mx-1-5 {
  margin-left: 1.5rem;
  margin-right: 1.5rem;
}
.l-mx-1-75 {
  margin-left: 1.75rem;
  margin-right: 1.75rem;
}
.l-mx-2 {
  margin-left: 2rem;
  margin-right: 2rem;
}
/* ... */

